implementei a visualização da pde com o gnuplot

--- a/gase16/Makefile
+++ b/gase16/Makefile
@@ -1,11 +1,19 @@
 # all: compila e produz um executável chamado pdeSolver no diretório login1-login2/;
 all:
 	gcc -o pdeSolver pdeSolver.c
+
+plot2d:
+	gnuplot -e "solucao='arq.dat'" pde2d.plg
+
+plot3d:
+	gnuplot -e "solucao='arq.dat'" pde3d.plg
+
 # clean: remove todos os arquivos temporários e os arquivos gerados pelo Makefile (*.o, executável, etc.).
 clean:
 	rm *.o || true
 	rm *~ || true
 	rm pdeSolver
+
 # doc: gera a documentação Doxygen em formato html
 doc:
 	echo GeraDoc
