Implementei a alocação das estruturas de dados e o seu preenchimento inicial, preciso debugar isso agora.

--- a/gase16/Makefile
+++ b/gase16/Makefile
@@ -1,6 +1,8 @@
+cFLAGS = -Wall -O0 -lm
+
 # all: compila e produz um executável chamado pdeSolver no diretório login1-login2/;
 all:
-	gcc -o pdeSolver pdeSolver.c
+	gcc -o pdeSolver pdeSolver.c $(cFLAGS)
 
 plot2d:
 	gnuplot -e "solucao='arq.dat'" pde2d.plg
