--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "enter program name, for example ${workspaceFolder}/a.out",
-            "args": ["-nx", "2", "-ny", "2", "-i", "10"],
+            "program": "${workspaceFolder}/gase16/pdeSolver",
+            "args": ["-nx", "10", "-ny", "10", "-i", "10"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
