Arrumei alguns problemas identificados na apresentação do trabalho

--- a/gase16/Makefile
+++ b/gase16/Makefile
@@ -33,14 +33,14 @@ plot3d:
 clean:
 	rm *.o || true
 	rm *~ || true
- 
+
 dist-clean: clean
 	rm nx || true
 	rm ny || true
 	ARQDAT=$$(cat arqdat) && \
-	rm $${ARQDAT}
+	rm $${ARQDAT} || true
 	rm arqdat || true
-	
+
 clean-docs:
 	rm -rf ./doc/ || true
 
